<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button2"
        android:layout_width="108dp"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:onClick="QuitApp"
        android:text="Exit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editText"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="108dp"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="64dp"
        android:onClick="sendMessage"
        android:text="@string/button_send"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/editText"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="235dp"
        android:layout_height="139dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:fadingEdge="horizontal|vertical"
        android:gravity="clip_vertical"
        android:hint="@string/edit_message"
        android:inputType="textMultiLine|textPersonName"
        android:lines="10"
        app:layout_constraintEnd_toStartOf="@+id/button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="140dp"
        android:layout_height="28dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="Message Styling"
        android:textColor="#3C42DD"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/editText"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <RadioButton
        android:id="@+id/radioButton"
        android:layout_width="122dp"
        android:layout_height="32dp"
        android:layout_marginTop="76dp"
        android:checked="false"
        android:onClick="checkFont1"
        android:text="@string/fontSize1"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editText"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <RadioButton
        android:id="@+id/radioButton2"
        android:layout_width="122dp"
        android:layout_height="32dp"
        android:layout_marginTop="108dp"
        android:checked="false"
        android:onClick="checkFont2"
        android:text="@string/fontSize2"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editText"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <RadioButton
        android:id="@+id/radioButton3"
        android:layout_width="122dp"
        android:layout_height="32dp"
        android:layout_marginTop="140dp"
        android:checked="false"
        android:onClick="checkFont3"
        android:text="@string/fontSize3"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editText"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="127dp"
        android:layout_height="28dp"
        android:layout_marginStart="168dp"
        android:layout_marginLeft="168dp"
        android:layout_marginTop="44dp"
        android:gravity="center_vertical"
        android:text="Letter Spacing"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="127dp"
        android:layout_height="28dp"
        android:layout_marginTop="44dp"
        android:gravity="center"
        android:text="Font Size Options"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="81dp"
        android:layout_height="28dp"
        android:layout_marginTop="232dp"
        android:gravity="center"
        android:text="Text Color"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <RadioButton
        android:id="@+id/radioButton5"
        android:layout_width="122dp"
        android:layout_height="32dp"
        android:layout_marginTop="260dp"
        android:checked="false"
        android:onClick="checkTurquoiseColor"
        android:text="Turquoise"
        android:textColor="@color/colorAccent"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editText"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <RadioButton
        android:id="@+id/radioButton6"
        android:layout_width="122dp"
        android:layout_height="32dp"
        android:layout_marginTop="292dp"
        android:checked="false"
        android:onClick="checkBlueColor"
        android:text="Blue"
        android:textColor="?attr/actionModeSplitBackground"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editText"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <RadioButton
        android:id="@+id/radioButton7"
        android:layout_width="122dp"
        android:layout_height="32dp"
        android:layout_marginTop="324dp"
        android:checked="false"
        android:onClick="checkOrangeColor"
        android:text="Orange"
        android:textColor="?android:attr/colorActivatedHighlight"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editText"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="120dp"
        android:layout_height="37dp"
        android:layout_marginTop="172dp"
        android:ems="10"
        android:hint="Other"
        android:inputType="textPersonName"
        android:onClick="useOtherFontSize"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/editText"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="145dp"
        android:layout_height="32dp"
        android:entries="@array/font_families"
        android:gravity="left"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="295dp"
        android:layout_height="271dp"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginBottom="196dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/editText"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        app:layout_constraintVertical_bias="0.99"
        app:srcCompat="@drawable/ic_launcher_foreground" />

</androidx.constraintlayout.widget.ConstraintLayout>